--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "type": "module",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
+   
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +18,6 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.3",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.16.3"
   }
 }
